bugfix frequency position (not overlaped)

--- a/packages/webamp-modern/src/css/elements.css
+++ b/packages/webamp-modern/src/css/elements.css
@@ -117,6 +117,7 @@ text wrap[font="BitmapFont"] {
   /* align-items: center; */
   align-items: var(--valign, center);
   justify-content: var(--align, center);
+  margin-left: 2px;
 }
 text span {
   user-select: none;
